# college_attendance_rs

./: .gitignore  Cargo.toml  README.md
data/: absents.json  attendance.csv  attendance.csv.bak  class_counts.csv  classes.json  timetable.json
src/: absents.rs  attendance.rs  classes.rs  main.rs  timetable.rs
