[package]
name = "college_attendance"
authors = ["Harsh Narayan Jha"]
description = "Simple CLI to automatically mark and increment my daily attendance at college, preventing me from doing that each day"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
